2008-03-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-state): Return 'removed for removed files.

	* bindings.el (standard-mode-line-modes): Avoid duplicating a string.

	* vc-cvs.el (vc-cvs-parse-status): Note there are problems with
	subdirectories.

	* vc.el (vc-status-prepare-status-buffer): Fix thinko.
	(vc-status-menu-map): Add binding for
	vc-status-kill-dir-status-process.  Add :enable for vc-status-refresh.
	(vc-status-menu-map-filter): Remove vc-ignore-menu-filter test.
	(vc-status-tool-bar-map): Add binding for vc-status-kill-dir-status-process.
	Don't test display-graphic-p and don't bind vc-ignore-menu-filter.
	(vc-update-vc-status-buffer, vc-status-kill-dir-status-process):
	Reset vc-status-process-buffer.
	(vc-status-refresh): Don't run two refreshes at a time.
	(vc-status): If the buffer is already in vc-status-mode only refresh.

2008-03-23  Andreas Schwab  <schwab@suse.de>

	* menu-bar.el (menu-bar-showhide-fringe-ind-menu) [mixed]: Fix
	radio button condition.
	[box]: Likewise.
	[customize]: Add radio button.

2008-03-23  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-was-keypad-mode, calc-full-mode)
	(calc-user-parse-tables, calc-gnuplot-default-device)
	(calc-gnuplot-default-output, calc-gnuplot-print-device)
	(calc-gnuplot-print-output, calc-gnuplot-geometry)
	(calc-graph-default-resolution, calc-graph-default-resolution-3d)
	(calc-invocation-macro, calc-trail-pointer, calc-trail-overlay)
	(calc-undo-list, calc-redo-list, calc-main-buffer)
	(calc-trail-buffer, calc-why, calc-last-kill, calc-dollar-values)
	(calc-dollar-used, calc-hashes-used, calc-quick-prev-results)
	(calc-said-hello, calc-executing-macro, calc-any-selections)
	(calc-help-phase, calc-full-help-flag, calc-refresh-count)
	(calc-display-dirty, calc-embedded-info, calc-embedded-active)
	(calc-standalone-flag, var-EvalRules, math-expr-function-mapping)
	(math-expr-variable-mapping, calc-mode-map, calc-digit-map)