@@ -1,5 +1,8 @@
 2008-03-23  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	* vc-bzr.el (vc-bzr-state): Return 'removed for removed files and
+	'unregistered for unregistered files.
+
 	* vc-hg.el (vc-hg-state): Return 'removed for removed files.
 
 	* bindings.el (standard-mode-line-modes): Avoid duplicating a string.
